--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
             "split": "train",
             "mode": "fine",
             "target_type": "semantic",
-            "num_samples": 120
+            "num_samples": 320
         }
     },
     "val_data_loader": {
@@ -95,13 +95,12 @@
         "save_dir": "saved/",
         "save_period": 5,
         "verbosity": 2,
-        "monitor": "min val_loss",
-        "early_stop": 10,
+        "monitor": "min val_mIoU",
+        "early_stop": 1000,
         "accumulation_steps": 2,
         "log_step": 5,
-        "do_validation_interval": 15,
-        "reset_interval": 4,
-        "len_epoch": 30,
+        "do_validation_interval": 5,
+        "lr_scheduler_step_interval": 30,
         "tensorboard": true
     },
     "pruning": {
@@ -186,9 +185,9 @@
             "max": 0.0001
         },
         "beta": {
-            "value": 0.1,
-            "anneal_rate": 1.1,
-            "max": 0.6
+            "value": 0.9,
+            "anneal_rate": 0.6,
+            "max": 0.1
         },
         "gamma": {
             "value": 1.15,
