change PFEC pruner to new transform block

--- a/config.json
+++ b/config.json
@@ -83,9 +83,9 @@
             "mode": "min",
             "threshold": 0.05,
             "factor": 0.5,
-            "patience": 0,
+            "patience": 1,
             "verbose": true,
-            "min_lr": 0.0001,
+            "min_lr": 0.00001,
             "threshold_mode": "rel"
         }
     },
@@ -110,83 +110,88 @@
             "kernel_size": 3
         },
         "compress_rate": 0.2,
-        "auxiliary_num_layers": 3,
+        "auxiliary_num_layers": 6,
         "pruning_plan": [
             {
                 "name": "mod5.block1.convs.conv1",
-                "compress_rate": 0.4,
-                "epoch": 49
+                "compress_rate": 0.3,
+                "epoch": 1
             },
             {
                 "name": "mod5.block2.convs.conv1",
-                "compress_rate": 0.4,
-                "epoch": 50
+                "compress_rate": 0.3,
+                "epoch": 6
             },
             {
                 "name": "mod5.block2.convs.conv2",
                 "compress_rate": 0.2,
-                "epoch": 56
+                "epoch": 12
             },
             {
                 "name": "mod5.block3.convs.conv1",
                 "compress_rate": 0.3,
-                "epoch": 64
+                "epoch": 20
             },
             {
                 "name": "mod5.block3.convs.conv2",
                 "compress_rate": 0.3,
-                "epoch": 71
+                "epoch": 27
             },
             {
                 "name": "mod6.block1.convs.conv2",
                 "compress_rate": 0.3,
-                "epoch": 90
+                "epoch": 50
             },
             {
                 "name": "mod7.block1.convs.conv1",
-                "compress_rate": 0.4,
-                "epoch": 95
+                "compress_rate": 0.2,
+                "epoch": 101
             },
             {
                 "name": "mod7.block1.convs.conv2",
                 "compress_rate": 0.15,
-                "epoch": 100
+                "epoch": 104,
+                "lr": 0.005
             },
             {
                 "name": "mod7.block1.convs.conv3",
                 "compress_rate": 0.1,
-                "epoch": 101
+                "epoch": 106,
+                "lr": 0.005
             },
             {
                 "name": "aspp.features.1.0",
                 "compress_rate": 0.3,
-                "epoch": 102
+                "epoch": 113,
+                "lr": 0.005
             },
             {
                 "name": "aspp.features.2.0",
-                "compress_rate": 0.15,
-                "epoch": 109
+                "compress_rate": 0.3,
+                "epoch": 120,
+                "lr": 0.005
             },
             {
                 "name": "aspp.features.3.0",
-                "compress_rate": 0.15,
-                "epoch": 1000
+                "compress_rate": 0.3,
+                "epoch": 130,
+                "lr": 0.005
             }
         ]
     },
     "teaching_assistant": {
         "interval": 5,
-        "tol": 0.01
+        "tol": 0.0075
     },
     "weight_scheduler": {
         "alpha": {
-            "value": 1e-05,
+            "value": 0.0001,
             "anneal_rate": 2,
-            "max": 0.0001
+            "max": 0
         },
         "beta": {
             "value": 0.9,
-            "anneal_rate": 0.6,
+            "anneal_rate": 0.5,
             "max": 0.1
         },
         "gamma": {
