--- a/config.json
+++ b/config.json
@@ -4,77 +4,9 @@
     "teacher": {
         "type": "HighResolutionNet",
         "args": {
-            "config": {
-                "extra": {
-                    "FINAL_CONV_KERNEL": 1,
-                    "STAGE1": {
-                      "NUM_MODULES": 1,
-                      "NUM_RANCHES": 1,
-                      "BLOCK": "BOTTLENECK",
-                      "NUM_BLOCKS": [
-                        4
-                      ],
-                      "NUM_CHANNELS": [
-                        64
-                      ],
-                      "FUSE_METHOD": "SUM"
-                    },
-                    "STAGE2": {
-                      "NUM_MODULES": 1,
-                      "NUM_BRANCHES": 2,
-                      "BLOCK": "BASIC",
-                      "NUM_BLOCKS": [
-                        4,
-                        4
-                      ],
-                      "NUM_CHANNELS": [
-                        48,
-                        96
-                      ],
-                      "FUSE_METHOD": "SUM"
-                    },
-                    "STAGE3": {
-                      "NUM_MODULES": 4,
-                      "NUM_BRANCHES": 3,
-                      "BLOCK": "BASIC",
-                      "NUM_BLOCKS": [
-                        4,
-                        4,
-                        4
-                      ],
-                      "NUM_CHANNELS": [
-                        48,
-                        96,
-                        192
-                      ],
-                      "FUSE_METHOD": "SUM"
-                    },
-                    "STAGE4": {
-                      "NUM_MODULES": 3,
-                      "NUM_BRANCHES": 4,
-                      "BLOCK": "BASIC",
-                      "NUM_BLOCKS": [
-                        4,
-                        4,
-                        4,
-                        4
-                      ],
-                      "NUM_CHANNELS": [
-                        48,
-                        96,
-                        192,
-                        384
-                      ],
-                      "FUSE_METHOD": "SUM"
-                    }
-                  },
-                "align_corners": true,
-                "ocr.mid_channels": 512,
-                "ocr.key_channels": 256,
-                "num_classes": 19,
-                "snapshot": "checkpoints/hrnet_ocr_cs_8162_torch11.pth"
-            }
-        }
+                "num_classes": 19
+        },
+        "snapshot": "checkpoints/hrnet_ocr_cs_trainval_8227_torch11_rename_dict.pth"
     },
     "transforms": {
         "joint_transforms": {
