update optimizer with momentum equals 0 and kd_loss only

--- a/cfg/cifar100/wrn_28_10/config1.json
+++ b/cfg/cifar100/wrn_28_10/config1.json
@@ -8,7 +8,7 @@
             "depth": 28,
             "widen_factor": 10
         },
-        "snapshot": "checkpoints/cifar100/wrn-28-10.th"
+        "snapshot": "checkpoints/cifar100/wrn-28-10.pth"
     },
     "train_data_loader": {
         "type": "Cifar100Dataloader",
