--- a/cfg/cifar10/resnet20/config5.json
+++ b/cfg/cifar10/resnet20/config5.json
@@ -1,6 +1,7 @@
 {
     "name": "Cifar10_Resnet20_Config5",
     "n_gpu": 1,
+    "seed": 2048,
     "teacher": {
         "type": "resnet20",
         "args": {
@@ -22,7 +23,7 @@
         "type": "Cifar10Dataloader",
         "args": {
             "data_dir": "data/",
-            "batch_size": 32,
+            "batch_size": 256,
             "shuffle": false,
             "validation_split": 0,
             "num_workers": 0,
@@ -30,9 +31,9 @@
         }
     },
     "optimizer": {
-        "type": "RAdam",
+        "type": "Adam",
         "args": {
-            "lr": 0.001
+            "lr": 0.03
         }
     },
     "supervised_loss": {
@@ -56,20 +57,15 @@
     },
     "metrics": ["accuracy", "top_k_acc"],
     "lr_scheduler": {
-        "type": "MyReduceLROnPlateau",
+        "type": "MultiStepLR",
         "args": {
-            "mode": "min",
-            "threshold": 0.05,
-            "factor": 0.1,
-            "patience": 10,
-            "verbose": true,
-            "min_lr": 1e-06,
-            "threshold_mode": "rel"
+            "milestones": [20,30],
+            "gamma": 0.2
         }
     },
     "trainer": {
         "name": "ClassificationTrainer",
-        "epochs": 1000,
+        "epochs": 30,
         "save_dir": "saved/",
         "save_period": 1,
         "verbosity": 2,
@@ -79,7 +75,14 @@
         "log_step": 100,
         "do_validation_interval": 1,
         "lr_scheduler_step_interval": 15,
-        "tensorboard": true
+        "tensorboard": true,
+        "resume_paths":[
+          "saved/models/Cifar10_Resnet20_Config5/0316_123556/checkpoint-epoch30.pth",
+          "saved/models/Cifar10_Resnet20_Config5/0316_130033/checkpoint-epoch30.pth",
+          "saved/models/Cifar10_Resnet20_Config5/0316_132444/checkpoint-epoch30.pth",
+          "saved/models/Cifar10_Resnet20_Config5/0316_140936/checkpoint-epoch30.pth",
+          "saved/models/Cifar10_Resnet20_Config5/0316_143653/checkpoint-epoch30.pth"
+        ]
     },
     "pruning": {
         "args": {
@@ -88,42 +91,10 @@
             "kernel_size": 3
         },
         "hint": [
-            {
-                "name": "layer3.2",
-                "epoch": 1
-            },
-            {
-                "name": "layer3.1",
-                "epoch": 1
-            }
         ],
         "unfreeze": [
-            {
-                "name": "layer3",
-                "epoch": 1
-            }
         ],
         "pruning_plan": [
-            {
-                "name": "layer3.0.conv2",
-                "epoch": 1
-            },
-            {
-                "name": "layer3.1.conv1",
-                "epoch": 1
-            },
-            {
-                "name": "layer3.1.conv2",
-                "epoch": 1
-            },
-            {
-                "name": "layer3.2.conv1",
-                "epoch": 1
-            },
-            {
-                "name": "layer3.2.conv2",
-                "epoch": 1
-            }
         ]
     },
     "weight_scheduler": {
